--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,50 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+    background: green;
+    box-sizing: border-box;
+  }
+  .card {
+    text-align: center;
+    background: white;
+    margin: auto;
+    border-radius: 15px;
+    border: 1px solid black;
+    padding: 8px;
+    padding-top: 149px;
+    font-size: 80px;
+    height: 224px;
+    width: 230px;
+    position: relative;
+    &:before {
+      position: absolute;
+      top: -12px;
+      left: 14px;
+      font-size: 80px;
+    }
+    &:after {
+      position: absolute;
+      bottom: -8px;
+      right: 14px;
+      font-size: 80px;
+      transform: rotate(180deg);
+    }
+    &.spade:before,
+    &.spade:after {
+      content: "\2660";
+      color: black;
+    }
+    &.club:before,
+    &.club:after {
+      content: "\2663";
+      color: black;
+    }
+    &.heart:before,
+    &.heart:after {
+      content: "\2665";
+      color: red;
+    }
+    &.diamond:before,
+    &.diamond:after {
+      content: "\2666";
+      color: red;
+    }
+  }
